UCF-APR2.4/ftr main/force-app/main/default/objects/Asset/fields/DPI_Sync_Review__c.field-meta.xml
<CustomField>
    <fullName>DPI_Sync_Review__c</fullName>
    <label>DPI Sync Review</label>
    <length>255</length>
    <type>Text</type>
</CustomField>