UCF-APR2.4/ftr main/force-app/main/default/objects/Asset/fields/DPI_WTN__c.field-meta.xml
<CustomField>
    <fullName>DPI_WTN__c</fullName>
    <label>DPI WTN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>