UCF-APR2.4/ftr main/force-app/main/default/objects/Asset/fields/EVPL_SNE_Code_OTC__c.field-meta.xml
<CustomField>
    <fullName>EVPL_SNE_Code_OTC__c</fullName>
    <label>EVPL_SNE_Code_OTC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>