UCF-APR2.4/ftr main/force-app/main/default/objects/Asset/fields/IP_SNE_Code_TERM__c.field-meta.xml
<CustomField>
    <fullName>IP_SNE_Code_TERM__c</fullName>
    <label>IP_SNE_Code_TERM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>