UCF-APR2.4/ftr main/force-app/main/default/objects/Asset/fields/M6_CircuitId__c.field-meta.xml
<CustomField>
    <fullName>M6_CircuitId__c</fullName>
    <externalId>true</externalId>
    <label>M6 CircuitId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>