UCF-APR2.4/ftr main/force-app/main/default/objects/Asset/fields/M6_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>M6_Document_Number__c</fullName>
    <label>M6 Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>