UCF-APR2.4/ftr main/force-app/main/default/objects/Asset/fields/M6_ServiceItemId__c.field-meta.xml
<CustomField>
    <fullName>M6_ServiceItemId__c</fullName>
    <label>M6 ServiceItemId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>