UCF-APR2.4/ftr main/force-app/main/default/objects/Asset/fields/NPA_NXX__c.field-meta.xml
<CustomField>
    <fullName>NPA_NXX__c</fullName>
    <label>NPA_NXX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>