UCF-APR2.4/ftr main/force-app/main/default/objects/Asset/fields/RUID_2_Terminating_CE_VLAN_ID__c.field-meta.xml
<CustomField>
    <fullName>RUID_2_Terminating_CE_VLAN_ID__c</fullName>
    <label>RUID #2 Terminating CE-VLAN ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>