UCF-APR2.4/ftr main/force-app/main/default/objects/Asset/fields/SNE_Code_TERM__c.field-meta.xml
<CustomField>
    <fullName>SNE_Code_TERM__c</fullName>
    <label>SNE Code TERM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>