UCF-APR2.4/ftr main/force-app/main/default/objects/Asset/fields/UNI_Host__c.field-meta.xml
<CustomField>
    <fullName>UNI_Host__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UNI_Host</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>UNI Host to</relationshipLabel>
    <relationshipName>uni_hosts</relationshipName>
    <type>Lookup</type>
</CustomField>