UCF-APR2.4/ftr main/force-app/main/default/objects/Asset/fields/UNI_Remote__c.field-meta.xml
<CustomField>
    <fullName>UNI_Remote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UNI Remote</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>UNI Remote to</relationshipLabel>
    <relationshipName>uni_remotes</relationshipName>
    <type>Lookup</type>
</CustomField>